--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,23 +1,26 @@
 #container {
     background-color: #e0e0e0;
-    height: 900px;
-    width: 900px;
+    height: 892px;
+    width: 892px;
     margin: auto;
     border:3px solid black;
     position:relative;
     margin-top: 100px;
     z-index: 20;
+    padding: 0px;
 }
 .units {
     display:inline-block;
-    border: 1px solid black;
     background-color: grey;
+    float: left;
+    z-index: 25;
+    margin:auto;
 }
 #gridButton{
     z-index: 30;
     position:relative;
-    margin-left:910px;
-    bottom: 850px;
+    margin-left:920px;
+    bottom: 950px;
     height: 20px;
     width: 100px;
     background-color:#e8e8e8;    
